fix: list-state

--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -38,7 +38,14 @@
             <ul>
                 <li class="widget-wrapper relative">
                     <div class="relative">
-                        <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns' [dataHead]="'All Assets'" (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' [totalRows]='totalRows' [currentPointer]='currentPointer' (searchRowTxt)='searchCalled($event)' (previousPageCalled)='prevPg()' (nextPageCalled)='nextPg()' (searchTriggerred)='callNewSearch()' [popRows]='popRows' (rowClickText)='handlePopClick($event)'>
+                        <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' 
+                            [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' 
+                            [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns' [dataHead]="'All Assets'" 
+                            (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' 
+                            [totalRows]='totalRows' [currentPointer]='currentPointer' (searchRowTxt)='searchCalled($event)' 
+                            (previousPageCalled)='prevPg()' (nextPageCalled)='nextPg()' (searchTriggerred)='callNewSearch()' 
+                            [popRows]='popRows' (rowClickText)='handlePopClick($event)' (headerColNameSelected)="handleHeaderColNameSelection($event)" 
+                            [headerColName]="headerColName" [direction]="direction" [searchPassed]='searchTxt'>
                         </app-data-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
                     </div>
