--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -1,3 +1,131 @@
+.table-content-container{
+    width: 100%;
+    height: calc(100vh - 310px);
+    overflow: scroll;
+    padding: 0px 2px;
+}
+
+.table-wrapper{
+  /* height: 100%;
+  background: var(--background-white); */
+}
+
+.table-header{
+    background-color: var(--background-white);
+    border: 1px solid var(--border-100);
+    height: 64px;
+    padding: 12px 19px 12px 24px;
+    border-radius: var(--border-radius) var(--border-radius) 0px 0px;
+}
+
+.table-header .search-bar-wrapper {
+    width: 100%;
+    border: 1px solid var(--border-200);
+}
+
+.table-header .header-left{
+    height: 40px;
+    max-width: 543px;
+    flex: 3;
+}
+
+.table-header .header-left .title{
+  display: inherit;
+  align-items: center;
+}
+
+.table-header .header-right{
+    flex: 5;
+    padding: 5px;
+    /* margin-left: auto; */
+}
+
+.table-header .header-right .add-remove-columns-wrapper{
+    float: right;
+    height: 25px;
+    border: 1px solid var(--border-200);
+    padding: 0px 16px;
+}
+
+.table-header .search-in-columns{
+    margin-left: auto;
+}
+
+.table-header .search-in-columns ::ng-deep .mat-form-field-infix {
+    width: 100%;
+}
+
+.table-header .search-in-columns ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
+    background: none;
+}
+
+.table-header ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
+    /* height: 0px; */
+    padding: .6em .75em 0 .75em;
+}
+
+.table-header ::ng-deep .mat-form-field-underline {
+    display: none;
+}
+
+.table-header .header-left .search-bar-wrapper img{
+    padding: 12px;
+}
+
+.table-header ::ng-deep .mat-select-value{
+    display: none;
+}
+
+.table-header .header-right ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix{
+    width: 20px;
+}
+
+.search-in-columns ::ng-deep .mat-select-arrow-wrapper {
+    width: 20px;
+    height: 20px;
+    /* background: #eee; */
+    border: 1px solid var(--border-100);
+}
+
+.search-in-columns ::ng-deep .mat-select-arrow {
+    width: 10px !important;
+    height: 10px !important;
+    border: none !important;
+    background-image: url(/assets/icons/arrow-down.svg);
+    background-repeat: no-repeat;
+}
+
+.search-in-columns ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix {
+  padding: 10px 10px !important;
+}
+
+.search-in-columns ::ng-deep .mat-select-trigger{
+    height: 100% !important;
+}
+
+.header-right ::ng-deep .mat-select-arrow {
+    width: 10px !important;
+    height: 10px !important;
+    border: none !important;
+    background-image: url(/assets/icons/columns.svg);
+    background-repeat: no-repeat;
+}
+
+::ng-deep .mat-option-text{
+    font: var(--text-body-2) !important;
+    color: var(--text-high-emphasis) !important;
+}
+
+::ng-deep .mat-option{
+    flex-direction: row-reverse !important;
+}
+
+::ng-deep .mat-option:first-child .mat-pseudo-checkbox{
+    display: none;
+}
+
+
+
 table {
   width: 100%;
   max-height: 650px;
@@ -33,10 +161,8 @@ tr.mat-header-row{
   padding: 16px 0px;
   font: var(--text-body-2);
   color: var(--text-low-emphasis);
-}
-
-thead {
-  height: 52px;
+  border: 1px solid var(--border-100);
+  background-color: #f8f8f8;
 }
 
 th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
