--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -1,21 +1,26 @@
+.table-container{
+  height: 100%;
+  width: 100%;
+}
+
 .table-content-container{
     width: 100%;
-    height: calc(100vh - 310px);
+    height: calc(100% - 68px);
     overflow: scroll;
-    padding: 0px 2px;
 }
 
 .table-wrapper{
-  /* height: 100%;
-  background: var(--background-white); */
+  height: 100%;
+  width: 100%;
+  background: var(--background-white);
 }
 
 .table-header{
-    background-color: var(--background-white);
+    /* background-color: var(--background-white); */
     border: 1px solid var(--border-100);
     height: 64px;
     padding: 12px 19px 12px 24px;
-    border-radius: var(--border-radius) var(--border-radius) 0px 0px;
+    /* border-radius: var(--border-radius) var(--border-radius) 0px 0px; */
 }
 
 .table-header .search-bar-wrapper {
@@ -32,6 +37,8 @@
 .table-header .header-left .title{
   display: inherit;
   align-items: center;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
 }
 
 .table-header .header-right{
