--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -1,48 +1,55 @@
 <div class="table-container flex flex-col">
-    <div class="table-wrapper">
-        <div class="table-header flex flex-row">
-        <div class="header-left flex flex-row">
-            <div class="title" *ngIf="showTitle">
-                {{ title }}
+        <div class="table-header">
+        <div class="table-title" *ngIf="tableTitle">
+            {{ tableTitle }} {{ dataSource.length }}
+        </div>
+        <div class="table-column-modifier flex flex-row" *ngIf="showSearchBar || showAddRemoveCol">
+            <div class="header-left flex flex-row">
+                <div class="search-bar-wrapper flex flex-row" *ngIf="showSearchBar">
+                    <img src="/assets/icons/header-search.svg" matPrefix alt="" />
+                    <input type="search" matInput [(ngModel)]="searchQuery" (keyup)="handleSearch($event)" placeholder="Search" />
+                    <div class="search-in-columns" matSuffix>
+                        <mat-form-field>
+                            <mat-select [formControl]="searchInColumns" multiple>
+                                <mat-option class="disabled-option" disabled="true" value="disabled">SEARCH IN</mat-option>
+                                <mat-option (click)="handleSearchInColumnsChange()" *ngFor="let column of whiteListColumns" [value]="column">
+                                {{column}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
             </div>
-            <div class="search-bar-wrapper flex flex-row" *ngIf="showSearchBar">
-                <img src="/assets/icons/header-search.svg" matPrefix alt="" />
-                <input type="search" matInput [(ngModel)]="searchQuery" (keyup)="handleSearch($event)" placeholder="Search" />
-                <div class="search-in-columns" matSuffix>
+            <div class="header-right">
+                <div class="add-remove-columns-wrapper" *ngIf="showAddRemoveCol">
                     <mat-form-field>
-                        <mat-select [formControl]="searchInColumns" multiple>
-                            <mat-option class="disabled-option" disabled="true" value="disabled">SEARCH IN</mat-option>
-                            <mat-option (click)="handleSearchInColumnsChange()" *ngFor="let column of whiteListColumns" [value]="column">
-                            {{columnNamesMap[column]}}
+                        <mat-select #select multiple>
+                            <mat-option class="disabled-option" disabled="true" value="disabled">Show/hide columns</mat-option>
+                            <mat-option #allColumnsSelected (click)="toggleAllSelection()" value="selectAll">Select All</mat-option>
+                            <mat-option (click)="optionClick()" *ngFor="let column of displayedColumns" [value]="column">
+                            {{column}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
+                    <span> Columns </span>
                 </div>
             </div>
         </div>
-        <div class="header-right">
-            <div class="add-remove-columns-wrapper" *ngIf="showAddRemoveCol">
-                <mat-form-field>
-                    <mat-select #select multiple>
-                        <mat-option class="disabled-option" disabled="true" value="disabled">Show/hide columns</mat-option>
-                        <mat-option #allColumnsSelected (click)="toggleAllSelection()" value="selectAll">Select All</mat-option>
-                        <mat-option (click)="optionClick()" *ngFor="let column of displayedColumns" [value]="column">
-                        {{columnNamesMap[column]}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <span> Columns </span>
-            </div>
-        </div>
     </div>
-    <div class="table-content-container">
+    <div class="table-content-container" (scroll)="onScroll($event)">
+    <div [class.loader]="data.length==0 && tableErrorMessage==''"></div>
+    <app-error-message *ngIf="tableErrorMessage" [selectedValue]="tableErrorMessage"></app-error-message>
+    <div class="table-wrapper" *ngIf="!tableErrorMessage && data.length>0">
         <table mat-table [dataSource]="dataSource" [matSortActive]="headerColName" [matSortDirection]="direction" matSortDisableClear matSort (matSortChange)="announceSortChange($event)">
             <ng-container *ngFor="let column of whiteListColumns;" [matColumnDef]="column">
-                <th [style.flex]="columnWidths[column]" mat-header-cell *matHeaderCellDef mat-sort-header> {{ columnNamesMap[column] }} </th>
-                <td [title]="element[column]" [style.flex]="columnWidths[column]" class="capitalize" mat-cell *matCellDef="let element"> {{ element[column] }} </td>
+                <th [style.flex]="columnWidths[column]" mat-header-cell *matHeaderCellDef mat-sort-header> {{ column }} </th>
+                <td [style.flex]="columnWidths[column]" class="capitalize" mat-cell *matCellDef="let element"> 
+                    <img *ngIf="imageDataMap[element[column]] && imageDataMap[element[column]]['image']" style="margin-right: 10px; vertical-align: text-bottom;" src="/assets/icons/{{imageDataMap[element[column]].image}}.svg" [title]="element[column]"> 
+                    <span *ngIf="!imageDataMap[element[column]] || !imageDataMap[element[column]].imageOnly" [title]="element[column]">{{ element[column] }} </span>
+                </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="whiteListColumns"></tr>
+            <tr mat-header-row *matHeaderRowDef="whiteListColumns; sticky: true"></tr>
             <tr (click)="goToDetails(row)" mat-row *matRowDef="let row; columns: whiteListColumns;"></tr>
         </table>
     </div>
