--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.css
@@ -55,7 +55,7 @@ app-issue-exception{
     right: 0;
     height: inherit;
 }
-
+/* 
 .violations-table.admin-rights ::ng-deep .data-table-wrap .table-cells:nth-child(1) {
     width: 58px;
     margin-left: 24px;
@@ -121,7 +121,7 @@ width: 100% !important;
 .violations-table ::ng-deep .data-table-wrap {
     border: 1px solid #dce1e8;
     border-top: none;
-}
+} */
 
 .data-table-desc{
     margin: 1em 0 0;
