--- a/webapp/src/app/pacman-features/secondary-components/list-table/list-table.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/list-table/list-table.component.css
@@ -25,13 +25,13 @@
 }
 
 .list-table-header-values:first-child {
-    flex: 2.5;
+    flex: 2;
     text-align: left;
 }
 
 .list-table-value {
     flex: 5;
-    justify-content: space-between;
+    justify-content: space-evenly;
     font-family: var(--text-light-font-family);
     font-size: .95em;
     align-items: center;
