modified filters: filters array getting empty

--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -49,8 +49,8 @@
             [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns" [tableTitle]="tableTitle"
             [imageDataMap]="tableImageDataMap" [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
             [searchQuery]="searchTxt" (nextPageCalled)="nextPg()" (downloadClicked)="handlePopClick($event)" (selectedFilterType)='changeFilterType($event)'
-            (selectedFilter)="changeFilterTags($event)" [filterArr]="filters" [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
-            >
+            (selectedFilter)="changeFilterTags($event)" [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
+            [filteredArray]="filters" (deleteFilters)="deleteFilters($event)" [filterTypeOptions]="filterTypeOptions" (testFilteredArray)="testFilteredArray()">
         </app-table>
         <app-issue-exception *ngIf="adminAccess && showExceptionalModal" [issueList]="cbArr"
             [exceptionAction]="exceptionAction" (closeExceptionalModal)="closeExceptionalModal($event)"
