--- a/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
@@ -1,6 +1,9 @@
 <mat-card class="panel">
   <mat-card-header>
     {{ card.header }}
+    <div class="graph-dropdown" *ngIf="card.id == 3">
+      <app-dropdown [items]="['1 week', '1 month', '6 months', '12 months', 'All time', 'Custom']" [selectedItem]="'All time'" (selected)="card.onSelectGraphInterval($event)"></app-dropdown>
+    </div>
   </mat-card-header>
   <mat-card-content>
     <div class="chart" *ngIf="card.id == 1">
@@ -19,10 +22,12 @@
         </app-doughnut-chart>
       </div>
     </div>
-    <div class="chart" *ngIf="card.id == 3" style="overflow-y: scroll">
-      <div [class.loader]="assetsCountData.length==0 && assetsCountDataError==''"></div>
-      <app-error-message *ngIf="assetsCountDataError" [selectedValue]="assetsCountDataError"></app-error-message>
-      <app-horizontal-bar-chart *ngIf="assetsCountDataError=='' && assetsCountData.length>0" [data]="assetsCountData"></app-horizontal-bar-chart>
+    <div class="chart" *ngIf="card.id == 3" style="overflow-y: scroll;">
+      <div [class.loader]="totalAssetsCountData.length==0 && totalAssetsCountDataError==''"></div>
+      <app-error-message *ngIf="totalAssetsCountDataError" [selectedValue]="totalAssetsCountDataError"></app-error-message>
+      <div class="chart-wrapper" id="TotalAssetsCountTrend" style="height: 100%; width: 100%; background-color: white;">
+          <app-multiline-zoom-graph *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''" [id]="'TotalAssetsCountTrend'" [showLegend]="true" [yAxisLabel]="'Total Assets'" [graphHeight]="320" [graphLinesData]="totalAssetsCountData"></app-multiline-zoom-graph>
+      </div>
     </div>
   </mat-card-content>
   <mat-card-actions>
